src/tui/tests/widgets/popups/import_modpack/snapshots/rmcl__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_confirm_step.snap
---
source: src/tui/tests/widgets/popups/import_modpack/render.rs
expression: terminal.backend()
---
"╭Direct Modpack Import─────────────────────────────────────╮"
"│Name: Synthetic Pack                                      │"
"│Pack Version: 1.0.0                                       │"
"│MC Version: 1.20.1                                        │"
"│Loader: Fabric 0.15.0                                     │"
"│Mods: 42 files                                            │"
"│Overrides: 3 files                                        │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──────────────────────────────────[h] back  [Enter] import╯"
