src/tui/tests/widgets/popups/import_modpack/snapshots/rmcl__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_confirm_step_without_loader_version.snap
---
source: src/tui/tests/widgets/popups/import_modpack/render.rs
expression: terminal.backend()
---
"╭Install Modpack───────────────────────────────────────────╮"
"│Name: Vanilla Pack                                        │"
"│Pack Version: 2.0                                         │"
"│MC Version: 1.20.1                                        │"
"│Loader: Vanilla                                           │"
"│Mods: 0 files                                             │"
"│Overrides: 12 files                                       │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰─────────────────────────────────[h] back  [Enter] install╯"
