src/tui/tests/widgets/popups/import_modpack/snapshots/rmcl__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_version_step.snap
---
source: src/tui/tests/widgets/popups/import_modpack/render.rs
expression: terminal.backend()
---
"╭Import Modpack────────────────────────────────────────────╮"
"│▶ 1.0.0  1.20.1  fabric                                   │"
"│  0.9.0  1.20.1  fabric                                   │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──────────────────────[/] search  [h] back  [Enter] select╯"
